[tool.poetry]
name = "pylate"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.780"
black = "^19.10b0"
pytest-cov = "^2.10.0"
pre-commit = "^2.5.1"
isort = "^4.3.21"
flake8 = "^3.8.3"

[tool.poetry.scripts]
pylate = "pylate.console.application:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
