[tool.poetry]
name = "{{ cookiecutter.package_name }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }}"]
version = "{{ cookiecutter.version }}"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.780"
black = "^19.10b0"
pytest-cov = "^2.10.0"
pre-commit = "^2.5.1"
isort = "^4.3.21"
flake8 = "^3.8.3"

[tool.poetry.scripts]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.console.application:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
